<resources>
    <string name="new_post">Your Post have been submitted to feeds</string>
    <string name="app_version">Ver.No.1.6</string>
    <string name="app_name">Aviation Connect</string>
    <string name="errorString">Something went wrong, Please try again.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgotten Password?</string>
    <string name="signup">Create a new account</string>
    <string name="username">Email Address or Username</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="which_of_these_describes_you_best">Which of these describes you best?</string>
    <string name="company">Company</string>
    <string name="individual">Individual</string>
    <string name="reset">Reset my password</string>
    <string name="email">Email</string>
    <string name="upload_an_image_of_you">Upload image</string>
    <string name="dialog_title">Confirmation</string>
    <string name="dialog_message">Are you sure you want to delete this account?</string>
    <string name="desc_forgot_password">Once you have submitted the detials of the desired account, please check your email to reset your password</string>
    <string name="createJoblist">Create Job Listing</string>
    <string name="joblist">Job Listing</string>
    <string name="messages">Message</string>
    <string name="connections">Connections</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="connect">Connect</string>
    <string name="go_back">Go Back</string>
    <string name="tab_date">Date</string>
    <string name="tab_time">Time</string>
    <string name="notifications">Notifications</string>
    <string name="view_comments">View Comments</string>
    <string name="tap_here_to_comment">Write a comment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="my_likes">My Likes</string>
    <string name="facebook_app_id">653314819291495</string>
    <string name="fb_login_protocol_scheme">fb653314819291495</string>
    <string name="facebook_client_token">c7b178c85173503d76273408c78995ea</string>
    <string name="calendar">Calender</string>
    <string name="job_listings">Jobs</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Yes</string>
    <string name="logout_menu">Logout</string>
    <string name="hint_search">Search for a Connection</string>
    <string name="hint_set_your_display_name">Display name</string>
    <string name="hint_write_a_brief_bio_here">Write a brief bio/introduction here(200 char limit)</string>
    <string name="everyone">Everyone</string>
    <string name="people">People</string>
    <string name="companies">Companies</string>
    <string name="err_unknown">Something went wrong</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="button_cancel">No</string>
    <string name="button_ok">Yes</string>
    <string name="confirmation">Confirmation</string>
    <string name="button_yes">YES</string>
    <string name="success_msg_user_deleted">Your account has been deleted successfully</string>
    <string name="button_no">NO</string>
    <string name="attending">Attending?</string>
    <string name="apply">Apply</string>
    <string name="share_post">Share</string>
    <string name="post">Post</string>
    <string name="button_save_changes">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hint_share_post">Write Something or add a hashtag</string>
    <string name="msg_connect_request">Your connection request has been sent</string>
    <string name="msg_post_created">Your post has been created successfully!</string>
    <string name="msg_post_updated">Your post has been update successfully!</string>
    <string name="msg_comment_created">Comment has been created successfully.</string>
    <string name="msg_remove_attachment">Are you sure you want to remove this attachment?</string>
    <string name="msg_remove_invite">Are you sure you want to remove this user?</string>
    <string name="msg_forgotpass">An email has been sent to your email address. Follow the instruction in the email to reset your password. </string>
    <string name="msg_remove_comment">Are you sure you want to remove this comment?</string>
    <string name="msg_remove_post">Are you sure you want to remove this post?</string>
    <string name="msg_remove_event">Are you sure you want to remove this event?</string>
    <string name="msg_remove_job">Are you sure you want to remove this job?</string>
    <string name="msg_jobAd">Your Job Ad has been created successfully.</string>
    <string name="msg_jobAd_update">Your Job Ad has been Updated successfully.</string>
    <string name="msg_jobAd_create">Your Job Ad has been Created successfully.</string>
    <string name="msg_remove_user">Your connection has been removed successfully.</string>
    <string name="msg_block_user">This user has been block successfully.</string>
    <string name="msg_event_created">Your Event has been created successfully.</string>
    <string name="msg_event_updated">Your Event has been updated successfully.</string>
    <string name="msg_meeting_created">Your Meeting has been created successfully.</string>
    <string name="msg_meeting_updated">Your Meeting has been updated successfully.</string>
    <string name="msg_note_created">Your Note has been created successfully.</string>
    <string name="msg_application_form">Application Sent successfully.</string>
    <string name="msg_exit">Are you sure you want to exit?</string>
    <string name="msg_logout">Are you sure you want to logout? You will be returned to the login screen</string>
    <string name="msg_no_sender">No friend found.</string>
    <string name="msg_firstname">Please enter first name.</string>
    <string name="msg_surname">Please enter surname.</string>
    <string name="msg_country">Please wait for getting country from your current location.</string>
    <string name="msg_city">Please wait for getting country from your current location.</string>
    <string name="err_one_file_at_a_time">Only one image file can be selected at a time</string>
    <string name="err_internal_supported">Sorry! Files from internal storage are supported only</string>
    <string name="err_email_already_exist">An account already exists with that email. Please try another one.</string>
    <string name="err_password">Your password cannot be empty and requires a length of between 8–30 characters.</string>
    <string name="err_image_size_large">The file exceeded the maximum size required by Aviation Connect. Recommended maximum size is 4MB, please try again.</string>
    <string name="err_internal_storage">This file is not present in your internal storage</string>
    <string name="err_signup">This email already exist.</string>
    <string name="err_login">Username or password combination was not recognised. Please try again or click the forgotten username/password link</string>
    <string name="network_error">Please check your internet connection and try again.</string>
    <string name="err_salary">Please enter salary.</string>
    <string name="err_coverletter">Please fill cover letter.</string>
    <string name="err_companyname">Please enter company name.</string>
    <string name="err_location">Please enter location.</string>
    <string name="err_role">Please enter job description.</string>
    <string name="err_title">Please enter job title.</string>
    <string name="err_position">Please enter job position.</string>
    <string name="err_try_with_correct_data">Enter valid email.</string>
    <string name="upload_event_image">Upload event image</string>
    <string name="msg_invalid_datetime">You have selected time that has already passed. Please select valid time.</string>
    <string name="msg_create_event">Your Event has been created successfully.</string>
    <string name="decline_application_confirmation">Are you sure you want to decline this application?</string>
    <string name="block_user">Block User</string>
    <string name="remove_user">Remove User</string>
    <string name="no_data">No Data</string>
    <string name="amp"><![CDATA[&]]></string>
    <string name="fb_sign_in_text">Sign in with Facebook</string>
    <string name="no_events_or_meetings">No events or meetings</string>
    <string name="no_result_found">No Result Found</string>
    <string name="cancel_invite">cancel invite</string>
    <string name="invite_connections_to_event">Invite Connections to Event</string>
    <string-array name="events_types">
        <item>Public Event</item>
        <item>Private Event</item>
    </string-array>
    <string name="str_btn">Open Popup Menu</string>
    <string name="action1">Create an Event</string>
    <string name="action2">Create a Meeting Schedule</string>
    <string name="menu1">Publish a message</string>
    <string name="menu2">Share a video</string>
    <string name="menu3">Post an event</string>
    <string name="menu4">Share an Article</string>
    <string name="What_will_you_write_about">What will you write about?</string>
    <string name="images">Images</string>
    <string name="camera">Camera</string>
    <string name="document">Document</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="edit_job">Edit Job</string>
    <string name="delete_job">Delete Job</string>
    <string name="large_dummy_text">Airside International is a quarterly magazine aimed at informing airports,airport authorities, airlines, ground service providers, GSE manufacturers and users, as well as reporting on airport infrastructure developments.\n\n The magazine is a response to airside infrastructure growth worldwide, of which is always continuing to progress. New airside development brings with it the requirement for new installations, new service providers, new equipment and new technologies.\n\n Airside International is a quarterly magazine aimed at informing airports, airport authorities, airlines, ground service providers, GSE manufacturers and users, as well as reporting on airport infrastructure developments.\n\n The magazine is a response to airside infrastructure growth worldwide, of which is always continuing to progress. New airside development brings with it the requirement for new installations, new service providers, new equipment and new technologies.\n\n Airside International is a quarterly magazine aimed at informing airports, airport authorities, airlines, ground service providers, GSE manufacturers and users, as well as reporting on airport infrastructure developments.\n\n The magazine is a response to airside infrastructure growth worldwide, of which is always continuing to progress. New airside development brings with it the requirement for new installations, new service providers, new equipment and new technologies.</string>
    <string name="help">Help</string>
    <string name="tell_us_about_comapny">Tell us a bit about the company</string>
    <string name="tell_us_about_yourself">Tell us a bit about yourself</string>
</resources>